<resources>
    <string name="logo" translatable="false">SHAREbox</string>
    <string name="share_activity_title">Archive</string>
    <string name="share_direct_download_activity_title">Download</string>
    <string name="text_input_note_hint_desc">What\'s this?</string>
    <string name="facebook_app_id" translatable="false">647232403661006</string>
    <string name="facebook_client_token" translatable="false">58f30ca9da7ab64f6e8b147f7fd4cf9b</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb647232403661006</string>
    <string name="no_result">No results.\nPull to refresh data.</string>
    <string name="default_notification_channel_id" translatable="false">Share Box Notification</string>
    <string name="search_hint">Search…</string>
    <string name="like">(%d)</string>
    <string name="comment">(%d)</string>
    <string name="share_count">Shares</string>
    <string name="page_number">%d/%d</string>
    <string name="comment_title">Comments (%d)</string>
    <string name="comment_hint">What\'s on your mind?</string>
    <string name="comments_input_hint">Comments…</string>
    <string name="button_add_bookmark_collection">Add new bookmark collection</string>
    <string name="bookmark_collection_hint_name">Name</string>
    <string name="bookmark_collection_hint_passcode">Passcode</string>
    <string name="action_clear_passcode">Clear passcode</string>
    <string name="dialog_bookmark_collection_picker_verify_passcode">Type passcode of %s</string>
    <string name="dialog_confirm">Confirmation</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="collapsed_text">Read more</string>
    <string name="expanded_text">Read less</string>
    <string name="shares_success">Archive successfully</string>
    <string name="logged_out">Logged out</string>
    <string name="create_user_error">An error occurred while create user.</string>
    <string name="logged_out_error">Error, try again!</string>
    <string name="error_require_name">Name can\'t be empty</string>
    <string name="error_require_passcode">Verify box failed.</string>
    <string name="choose_box">Choose folder</string>
    <string name="total_box">+%d more box…</string>
    <string name="search_box_result_empty">No found any box.</string>
    <string name="title_setting">Settings</string>
    <string name="title_theme">Themes</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_auto">Automatic</string>
    <string name="title_network_condition">Network condition for download</string>
    <string name="network_condition_wifi">Wifi only</string>
    <string name="network_condition_wifi_and_cellular">Both Wifi and cellular data</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_confirm_message">Are you sure to sign out?</string>
    <string name="setting_about">%s • Version %s</string>
    <string name="app_desc">Sharebox is an app that helps you store all the content you want to save and easily share it with your friends.</string>
    <string name="share_text_quote_hint">Type here…</string>
    <string name="share_link_hint">Enter URL</string>
    <string name="require_input_link">Please input the link</string>
    <string name="require_input_correct_weblink">Please input correct weblink</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_message">Please log in to the app to ensure your content is backed up and share your content with friends through Box Member.</string>
    <string name="sign_in_to_comment">Sign in to comment</string>
    <string name="success_save_image_to_gallery">Save this image to Gallery successfully</string>
    <string name="title_image_download_quality">Image quality save to Gallery</string>
    <string name="require_min_image_quality">Quality must be from %d</string>
    <string name="title_setting_sync_background">Sync data daily</string>
    <string name="message_enqueue_sync_data">Auto sync data to cloud everyday.</string>
    <string name="message_cancel_enqueue_sync_data">Canceled auto sync data</string>
    <string name="downloading">Downloading…</string>
    <string name="cancel">Cancel</string>
    <string name="limit_share_image">We just allow archive maximum 10 images</string>
    <string name="sync_data_to_cloud">Syncing data to cloud…</string>
    <string name="sync_data_share_to_cloud">Syncing data to cloud…</string>
    <string name="network_wifi_only_warning">Wi-Fi is not connected. Do you want to use mobile data to download this content?</string>
    <string name="alert_notice">Notice</string>
    <string name="alert_request_post_notification_permission_message">App needs POST NOTIFICATION permission to display notifications until do some jobs: sync data, download network contents,…</string>
    <string name="alert_no_thanks">No, thanks</string>
    <string name="error_save_image_to_gallery">Error save image to gallery</string>
    <string name="distribute_file_content">The file is uploading</string>
    <string name="distribute_file_title">Upload File</string>
    <string name="nothing_to_download">Nothing to download</string>
    <string name="text_sync_data">Sync data</string>
    <string name="note">Note</string>
    <string name="web">Web</string>
    <string name="images">Images</string>
    <string name="recently_shares">Recently</string>
    <string name="no_boxes">You don\'t have any box.\nClick on button (+) to create a new one.</string>
    <string name="desc_image">This is an image</string>
    <string name="download_audios">Download Audios</string>
    <string name="download_videos">Download Videos</string>
    <string name="download_images">Download Images</string>
    <string name="downloading_all_image">Downloading…(%d/%d)</string>
    <string name="require_choose_box">Please choose box to archive</string>
    <string name="your_boxes">Your folders</string>
    <string name="copied">Copied</string>
    <string name="auto_sync_data_desc">*Your data will be auto sync to cloud daily to keep it always up-to-date.</string>
    <string name="desc">Description</string>
    <string name="desc_box_hint">What is this Box? What does it to do?…</string>
    <string name="passcode_desc">* Protect your content to limit access from others.</string>
    <string name="copy_id">Copy ID</string>
    <string name="share_link_label">Browse</string>
    <string name="permission_denied">Permission denied</string>
    <string name="view_all">View all (%d)</string>
    <string name="view_image_activity_title">View Images</string>
    <string name="confirm_save_message">Are you sure to save this?</string>
    <string name="title_alert">Alert</string>
    <string name="require_sign_to_sync_cloud">You need sign in to sync the data to cloud!</string>
    <string name="app_policy_desc">By sign in to app, you agree to our</string>
    <string name="discover">Discover</string>
    <string name="discover_subtitle">Discover interesting videos, images, musics, news and more</string>
    <string name="choose_box_for_web">Archive WebLink To</string>
    <string name="please_choose_box">Please choose a box</string>
    <string name="move_share_to">Move share to…</string>
    <string name="save">Save</string>
    <string name="title_edit_box">Edit folder</string>
    <string name="title_create_box">New folder</string>
    <string name="use_passcode">Use Passcode</string>
    <string name="confirm_move_to_trash">Are you sure to move this share to trash?</string>
    <string name="confirm_delete_box">Delete this box? All shares in this box will be moved to trash.</string>
    <string name="error_delete_box">Delete box failed. Try again!</string>
    <string name="title_trash">Trash</string>
    <string name="restore_share_to">Restore to…</string>
    <string name="basic_info">Basic Info</string>
    <string name="members">Members</string>
    <string name="title_add_member">Add member</string>
    <string name="add">Add</string>
    <string name="duplicate_member">Duplicate member</string>
    <string name="hint_input_email">Email</string>
    <string name="title_box_invited">My Invited Boxes</string>
    <string name="require_sign_in_to_manage_member">You need sign in to manage box member</string>
    <string name="error_add_yourself">You can\'t add yourself</string>
    <string name="download">Download</string>
    <string name="import_box">Import Box</string>
    <string name="input_box_id">Enter Box ID</string>
    <string name="box_id_required">Box ID is required</string>
    <string name="box_import_started">Downloading Box…</string>
    <string name="box_import_success">Box imported successfully</string>
    <string name="box_import_failed">Could not import this Box. Check its ID and your access.</string>
    <string name="export_box">Export folder</string>
    <string name="box_export_success">Box uploaded successfully</string>
    <string name="box_export_failed">Could not upload this Box. Please try again.</string>
    <string name="search_pinterest_hint">Search Pinterest</string>
    <string name="pinterest_search_action">Search</string>
    <string name="search_text_required">Enter search text</string>
    <string name="pinterest_html_results_unavailable">No Pinterest results available. Try another search.</string>
    <string name="pinterest_pin_image">Pinterest Pin image</string>
    <string name="title_num_of_recently">Number of recently share to show</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="delete">Delete</string>
    <string name="transfer_title">Transfers</string>
    <string name="transfer_make_copy">Save an independent copy</string>
    <string name="transfer_copy_code">Copy transfer code</string>
    <string name="transfer_open_box">Open folder</string>
    <string name="transfer_keep_offline">Make existing files available offline</string>
    <string name="library_brand">ShareBox</string>
    <string name="library_title">Your library</string>
    <string name="library_subtitle">Your files, always within reach.</string>
    <string name="library_search">Search files, notes and folders</string>
    <string name="library_add">Add content</string>
    <string name="library_new_folder">New folder</string>
    <string name="library_import">Import package</string>
    <string name="library_add_files">Add files</string>
    <string name="library_settings">Settings</string>
    <string name="library_empty_title">A home for your files</string>
    <string name="library_empty_body">Keep documents, photos and notes together. Add your first file or import a shared package.</string>
    <string name="library_transfer_subtitle">Move your files. Keep your freedom.</string>
    <string name="library_local_transfer">Share a package</string>
    <string name="library_local_transfer_desc">Save a folder as a .sharebox file, or import one someone sent you. No account needed.</string>
    <string name="library_cloud_transfer">Send through the cloud</string>
    <string name="library_cloud_transfer_desc">Upload only when you choose. Share a code so someone can download your latest published version.</string>
    <string name="library_manage_copies">Manage local copies</string>
    <string name="library_manage_copies_desc">Download older cloud files or keep your edits in a separate folder.</string>
    <string name="library_export">Export package</string>
    <string name="library_upload">Upload and get a code</string>
    <string name="library_download_code">Use a transfer code</string>
    <string name="library_transfer_note">Packages support up to 512 MB. Exported files are not protected by your folder passcode.</string>
    <string name="library_working">Transferring your files…</string>
    <string name="guideline_heading">Your ShareBox guide</string>
    <string name="guideline_back">Back</string>
</resources>